[NIAD-3148] Add method to TestUtility.java `getEhrFolderComponent`